--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div>
                 <nav class="menuNavigation">
                     <ul> 
-                        <li> <a href="homepage.html"> Home</a></li>
+                        <li> <a href="index.html"> Home</a></li>
                         <li> <a href="sportevents.html"> Sport Events</a></li>
                         <li> <a href="aboutus.html"> About Us</a></li>     
                     </ul>
@@ -29,12 +29,19 @@
                     <img src="Images/multisportbanner.png" alt="mainPic" id="mainPic">
                     <br>
                     <h2 id="subhead">This is a college Project</h2>
-                    <p>Looking for the best sporting events near you? Our website lets you search, 
+                    <p id="description">
+                        Looking for the best sporting events near you? Our website lets you search, 
                         discover, and book tickets for a wide range of sports—whether it's football, 
                         basketball, marathons, or extreme sports. Stay updated on schedules, venues, 
                         and exclusive events. Never miss a moment of the action!
                     </p>
                 </section>
+                <div class ="event">
+                    <h3 id="events">Top Sporting Events</h3>
+                    <img src="Images/nfl.jpg" alt="event" id="pic1">
+                    <pi><strong>Event:</strong> National Football League - Galway vs Kerry</pi>
+                    <a href="booknow.html"><strong>Book Now</strong></a>
+                </div>
             </main>
                 <footer>
                     <!--This comment is for the <footer> element after the main element on the page-->
