--- a/aboutus.html
+++ b/aboutus.html
@@ -2,27 +2,33 @@
     <html lang="en">
         <head>
             <meta charset="UTF-8">
-            <meta name="desciption" content="Website">
-            <meta name="keywords" content="html5, Website, css">
+            <meta name="desciption" content="Sports website that allows you to book events">
+            <meta name="keywords" content="Sports, Events, html5, Website, css">
             <title>Sportz Search</title>
             <link rel="stylesheet" href="Styles/stylesheet.css">
         </head>
 
         <body>
             <header>
-                <img style="float: left; margin-right: 10px;" src="Images/logo(black).png" alt="logo" width="80">
-                <h1> Sportz Search </h1>
+                <div class="header-container">
+                    <div class="logo-title">
+                            <img style="float: left; margin-right: 10px;" src="Images/logo(black).png" alt="logo" width="80">
+                        <h1>Sportz Search</h1>
+                    </div>
+                    <nav>
+                        <ul>
+                                <li> <a href="index.html"> Home</a></li>
+                                <li> <a href="sportevents.html"> Sport Events</a></li>
+                                <li> <a href="aboutus.html"> About Us</a></li>  
+                        </ul>
+                    </nav>
+                    <p class="class-project">This is a class project</p>
+                </div>
             </header>
-            <div>
-                <nav class="menuNavigation">
-                    <ul> 
-                        <li> <a href="index.html"> Home</a></li>
-                        <li> <a href="sportevents.html"> Sport Events</a></li>
-                        <li> <a href="aboutus.html"> About Us</a></li>     
-                    </ul>
+                <nav>
+
                 </nav>
             </div>
-
             <main>
                 <section>
                     <br>
@@ -30,7 +36,7 @@
                     <video autoplay loop muted playsinline id="bg-video">
                         <source src="Images/lebronnnnw.mp4" type="video/mp4" />
                       </video>
-                    <p>Sportz Search is your ultimate destination for discovering and booking 
+                    <p id="description">Sportz Search is your ultimate destination for discovering and booking 
                         upcoming sporting events. Whether you're a fan of football, basketball, 
                         rugby, or extreme sports, Sportz Search makes it easy to stay updated on the 
                         latest matches, tournaments, and competitions happening near you. With a 
@@ -43,7 +49,6 @@
                 </section>
             </main>
                 <footer>
-                    <!--This comment is for the <footer> element after the main element on the page-->
                     <p> &copy;2025 Sportz Search </p>
                 </footer>
         </body>
