--- a/booknow.html
+++ b/booknow.html
@@ -2,30 +2,34 @@
     <html lang="en">
         <head>
             <meta charset="UTF-8">
-            <meta name="desciption" content="Website">
-            <meta name="keywords" content="html5, Website, css">
-            <title>About Us</title>
+            <meta name="desciption" content="Sports website that allows you to book events">
+            <meta name="keywords" content="Sports, Events, html5, Website, css">
+            <title>Sportz Search</title>
             <link rel="stylesheet" href="Styles/stylesheet.css">
         </head>
-
         <body>
             <header>
-                <img style="float: left; margin-right: 10px;" src="Images/logo(black).png" alt="logo" width="80">
-                <h1> Sportz Search </h1>
+                <div class="header-container">
+                    <div class="logo-title">
+                            <img style="float: left; margin-right: 10px;" src="Images/logo(black).png" alt="logo" width="80">
+                        <h1>Sportz Search</h1>
+                    </div>
+                    <nav>
+                        <ul>
+                                <li> <a href="index.html"> Home</a></li>
+                                <li> <a href="sportevents.html"> Sport Events</a></li>
+                                <li> <a href="aboutus.html"> About Us</a></li>  
+                        </ul>
+                    </nav>
+                    <p class="class-project">This is a class project</p>
+                </div>
             </header>
-            <div>
-                <nav class="menuNavigation">
-                    <ul> 
-                        <li> <a href="index.html"> Home</a></li>
-                        <li> <a href="sportevents.html"> Sport Events</a></li>
-                        <li> <a href="aboutus.html"> About Us</a></li>  
-                    </ul>
-                </nav>
-            </div>
+            <nav>
 
+            </nav>
             <main>
                 <section>
-                    <form action="action_page.php" style="border:1px solid #ccc">
+                    <form action="https:/foo.com" style="border:1px solid #ccc">
                         <div class="container">
                           <h1>Book Now</h1>
                           <p>Please fill in this form to Book.</p>
@@ -46,9 +50,8 @@
                       </form>
                 </section>
             </main>
-                <footer>
-                    <!--This comment is for the <footer> element after the main element on the page-->
-                    <p> &copy;2025 Sportz Search </p>
-                </footer>
+            <footer>
+                <p> &copy;2025 Sportz Search </p>
+            </footer>
         </body>
     </html>
