--- a/index.html
+++ b/index.html
@@ -2,50 +2,52 @@
     <html lang="en">
         <head>
             <meta charset="UTF-8">
-            <meta name="desciption" content="Website">
-            <meta name="keywords" content="html5, Website, css">
+            <meta name="desciption" content="Sports website that allows you to book events">
+            <meta name="keywords" content="Sports, Events, html5, Website, css">
             <title>Sportz Search</title>
             <link rel="stylesheet" href="Styles/stylesheet.css">
         </head>
-
         <body>
             <header>
-                <img style="float: left; margin-right: 10px;" src="Images/logo(black).png" alt="logo" width="80">
-                <h1> Sportz Search </h1>
+                <div class="header-container">
+                    <div class="logo-title">
+                            <img style="float: left; margin-right: 10px;" src="Images/logo(black).png" alt="logo" width="80">
+                        <h1>Sportz Search</h1>
+                    </div>
+                    <nav>
+                        <ul>
+                                <li> <a href="index.html"> Home</a></li>
+                                <li> <a href="sportevents.html"> Sport Events</a></li>
+                                <li> <a href="aboutus.html"> About Us</a></li>  
+                        </ul>
+                    </nav>
+                    <p class="class-project">This is a class project</p>
+                </div>
             </header>
-            <div>
-                <nav class="menuNavigation">
-                    <ul> 
-                        <li> <a href="index.html"> Home</a></li>
-                        <li> <a href="sportevents.html"> Sport Events</a></li>
-                        <li> <a href="aboutus.html"> About Us</a></li>     
-                    </ul>
-                </nav>
-            </div>
+            <nav>
 
+            </nav>
             <main>
-                <section>
-                    <br>
-                    <img src="Images/multisportbanner.png" alt="mainPic" id="mainPic">
-                    <br>
-                    <h2 id="subhead">This is a college Project</h2>
-                    <p id="description">
+                <br>
+                <img src="Images/multisportbanner.png" alt="mainPic" id="mainPic">
+                <br>
+                <div class="description">
+                    <p>
                         Looking for the best sporting events near you? Our website lets you search, 
                         discover, and book tickets for a wide range of sports—whether it's football, 
                         basketball, marathons, or extreme sports. Stay updated on schedules, venues, 
                         and exclusive events. Never miss a moment of the action!
                     </p>
-                </section>
-                <div class ="event">
-                    <h3 id="events">Top Sporting Events</h3>
-                    <img src="Images/nfl.jpg" alt="event" id="pic1">
-                    <pi><strong>Event:</strong> National Football League - Galway vs Kerry</pi>
-                    <a href="booknow.html"><strong>Book Now</strong></a>
                 </div>
             </main>
-                <footer>
-                    <!--This comment is for the <footer> element after the main element on the page-->
-                    <p> &copy;2025 Sportz Search </p>
-                </footer>
+            <aside>
+
+            </aside>
+            <section>
+
+            </section>
+            <footer>
+                <p> &copy; 2025 Sportz Search </p>
+            </footer>
         </body>
     </html>
