--- a/sportevents.html
+++ b/sportevents.html
@@ -2,45 +2,50 @@
     <html lang="en">
         <head>
             <meta charset="UTF-8">
-            <meta name="desciption" content="Website">
-            <meta name="keywords" content="html5, Website, css">
-            <title>Sport Events</title>
+            <meta name="desciption" content="Sports website that allows you to book events">
+            <meta name="keywords" content="Sports, Events, html5, Website, css">
+            <title>Sportz Search</title>
             <link rel="stylesheet" href="Styles/stylesheet.css">
         </head>
 
         <body>
             <header>
-                <img style="float: left; margin-right: 10px;" src="Images/logo(black).png" alt="logo" width="80">
-                <h1> Sportz Search </h1>
+                <div class="header-container">
+                    <div class="logo-title">
+                            <img style="float: left; margin-right: 10px;" src="Images/logo(black).png" alt="logo" width="80">
+                        <h1>Sportz Search</h1>
+                    </div>
+                    <nav>
+                        <ul>
+                                <li> <a href="index.html"> Home</a></li>
+                                <li> <a href="sportevents.html"> Sport Events</a></li>
+                                <li> <a href="aboutus.html"> About Us</a></li>  
+                        </ul>
+                    </nav>
+                    <p class="class-project">This is a class project</p>
+                </div>
             </header>
-            <div>
-                <nav class="menuNavigation">
-                    <ul> 
-                        <li> <a href="index.html"> Home</a></li>
-                        <li> <a href="sportevents.html"> Sport Events</a></li>
-                        <li> <a href="aboutus.html"> About Us</a></li>     
-                    </ul>
+                <nav>
+
                 </nav>
             </div>
-
             <main>
-                <div class="rugby">
-                    <h2 id="subhead"></h2>
-                    <img src="Images/investec.jpg" alt="rugby" id="pics">
+                <section class="SportsEvent">
+                    <br>
+                    <img src="Images/investec.jpg" alt="rugby" id="sportpics">
                     <p><strong>Teams:</strong> Leinster Rugby vs Harlequins</p>
                     <p><strong>Date & Time:</strong> April 5, 2025</p>
                     <p><strong>Location:</strong> Croke Park, Dublin</p>
                     <a href="booknow.html"><strong>Book Now</strong></a>
-                </div>
+                </section>
 
-                <section class="basketball">
-                    <h2 id="subhead"></h2>
+                <section class="SportsEvent">
+                    <br>
+                    <img src="Images/basketballteam.jpg" alt="basketball" id="sportpics">
                     <p><strong>Event:</strong> AIG U14 Boys All-Ireland Club Championship</p>
                     <p><strong>Date & Time:</strong> April 5-6, 2025</p>
                     <p><strong>Location:</strong> Gormanston, Co. Meath</p>
                     <a href="booknow.html"><strong>Book Now</strong></a>
-                    <img src="Images/basketballteam.jpg" alt="basketball" id="pics">
-                </section>
                 </section>
             </main>
                 <footer>
