--- a/sportevents.html
+++ b/sportevents.html
@@ -30,23 +30,23 @@
                 </nav>
             </div>
             <main>
-                <section class="SportsEvent">
-                    <br>
-                    <img src="Images/investec.jpg" alt="rugby" id="sportpics">
-                    <p><strong>Teams:</strong> Leinster Rugby vs Harlequins</p>
-                    <p><strong>Date & Time:</strong> April 5, 2025</p>
-                    <p><strong>Location:</strong> Croke Park, Dublin</p>
-                    <a href="booknow.html"><strong>Book Now</strong></a>
-                </section>
+                <div class="SportsEvent">
+                    <img src="Images/investec.jpg" alt="Rugby" id="sportpics">
+                        <p><strong>Teams:</strong> Leinster Rugby vs Harlequins</p>
+                        <p><strong>Date & Time:</strong> April 5, 2025</p>
+                        <p><strong>Location:</strong> Croke Park, Dublin</p>
+                        <a href="booknow.html" class="book-now"><strong>Book Now</strong></a>
+                    </div>
+                </div>
 
-                <section class="SportsEvent">
-                    <br>
+                <div class="SportsEvent">
                     <img src="Images/basketballteam.jpg" alt="basketball" id="sportpics">
                     <p><strong>Event:</strong> AIG U14 Boys All-Ireland Club Championship</p>
                     <p><strong>Date & Time:</strong> April 5-6, 2025</p>
                     <p><strong>Location:</strong> Gormanston, Co. Meath</p>
-                    <a href="booknow.html"><strong>Book Now</strong></a>
-                </section>
+                    <a href="booknow.html" class="book-now" ><strong>Book Now</strong></a>
+                    </div>
+                </div>
             </main>
                 <footer>
                     <!--This comment is for the <footer> element after the main element on the page-->
