--- a/index.html
+++ b/index.html
@@ -40,16 +40,19 @@
                     </p>
                 </div>
             </main>
-            <aside class="recenttext">
-                <h2> Recent Events</h2>
+            <aside class="recentevent">
+                <div class="eventtext">
+                <h2> Recent Event</h2>
                 <p>
                     ​One of the most recent sporting events in Ireland was the Women's Six Nations rugby match between Ireland and Italy,
                     held on March 30, 2025. Ireland delivered a commanding performance, securing a record-breaking victory over Italy. 
                     The match showcased Ireland's dominance in the tournament and highlighted standout performances from several players.​
                     For a detailed recap of the game, you can watch the highlights here:
                 </p>
-                <iframe width="420" height="315" class="recentevent"
-                src="https://youtu.be/T42cUMp7Xs8?si=9ZKxwm0XRKs7Rzp4" frameborder="0" allowfullscreen></iframe>>
+                </div>
+
+                <iframe width="420" height="315" class="eventvideo"
+                src="https://www.youtube.com/embed/T42cUMp7Xs8?si=9ZKxwm0XRKs7Rzp4" frameborder="0" allowfullscreen></iframe>
                 </iframe>
             </aside>
             <footer>
