--- a/booknow.html
+++ b/booknow.html
@@ -50,7 +50,7 @@
                       </form>
                 </section>
             </main>
-            <footer>
+            <footer class="footerbooknow">
                 <p> &copy;2025 Sportz Search </p>
             </footer>
         </body>
