--- a/sportevents.html
+++ b/sportevents.html
@@ -19,7 +19,7 @@
                         <ul>
                                 <li> <a href="index.html"> Home</a></li>
                                 <li> <a href="sportevents.html"> Sport Events</a></li>
-                                <li> <a href="aboutus.html"> About Us</a></li>  
+                                <li> <a href="aboutus.html"> Contact Us</a></li>  
                         </ul>
                     </nav>
                     <p class="class-project">This is a class project</p>
@@ -47,7 +47,7 @@
             </main>
                 <footer>
                     <!--This comment is for the <footer> element after the main element on the page-->
-                    <p> &copy;2025 Sportz Search </p>
+                    <p> &copy; 2025 Sportz Search </p>
                 </footer>
         </body>
     </html>
