--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <ul>
                                 <li> <a href="index.html"> Home</a></li>
                                 <li> <a href="sportevents.html"> Sport Events</a></li>
-                                <li> <a href="aboutus.html"> About Us</a></li>  
+                                <li> <a href="aboutus.html"> Contact Us</a></li>  
                         </ul>
                     </nav>
                     <p class="class-project">This is a class project</p>
@@ -52,7 +52,7 @@
                 </div>
 
                 <iframe width="420" height="315" class="eventvideo"
-                src="https://www.youtube.com/embed/T42cUMp7Xs8?si=9ZKxwm0XRKs7Rzp4" frameborder="0" allowfullscreen></iframe>
+                src="https://www.youtube.com/embed/T42cUMp7Xs8?si=9ZKxwm0XRKs7Rzp4" frameborder="0" allowfullscreen>
                 </iframe>
             </aside>
             <footer>
