--- a/booknow.html
+++ b/booknow.html
@@ -29,11 +29,10 @@
             </nav>
             <main>
                 <section>
-                    <form action="https:/foo.com" style="border:1px solid #ccc">
+                    <form action="https:/foo.com">
                         <div class="container">
                           <h1>Book Now</h1>
                           <p>Please fill in this form to Book.</p>
-                          <hr>
                       
                           <label for="email"><b>Email</b></label>
                           <input type="text" placeholder="Enter Email" name="email" required>
