--- a/sportevents.html
+++ b/sportevents.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="SportsEvent">
-                <img src="Images/basketballteam.jpg" alt="Basketball" class="sportpics">  <!-- Changed ID to class -->
+                <img src="Images/basketballteam.jpg" alt="Basketball" id="sportpics">
                 <p><strong>Event:</strong> AIG U14 Boys All-Ireland Club Championship</p>
                 <p><strong>Date & Time:</strong> April 5-6, 2025</p>
                 <p><strong>Location:</strong> Gormanston, Co.Meath</p>
